# agent-worflows

./: README.md
adk-genie-mcp-agent/: .env.example  .gitignore  README.md  pyproject.toml  run_local.py
adk-genie-mcp-agent/agent/: __init__.py  agent.py
adk-genie-mcp-agent/deployment/: deploy.py  query_remote.py
